--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,6 +97,7 @@
             android:clearTaskOnLaunch="true"
             android:configChanges="keyboardHidden|orientation|screenSize|keyboard|navigation"
             android:enabled="true"
+            android:exported="true"
             android:excludeFromRecents="true"
             android:launchMode="singleTask"
             android:resumeWhilePausing="true"
