--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 buildscript {
 
     repositories {
-        jcenter()
         mavenCentral()
+        maven { url "https://plugins.gradle.org/m2/" }
         google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath 'com.android.tools.build:gradle:8.3.2'
     }
 }
 
@@ -17,7 +17,6 @@ task clean(type: Delete) {
 
 allprojects {
     repositories {
-        jcenter()
         google()
         mavenCentral()
     }
