implement lagging weather api call without need for intent call

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,8 @@
-apply plugin: 'com.android.application'
-apply plugin: 'org.jetbrains.kotlin.android'
+plugins {
+    id("com.android.application")
+    id("org.jetbrains.kotlin.android")
+    id("org.jetbrains.kotlin.plugin.serialization")
+}
 android {
     compileSdkVersion 29
 
@@ -54,7 +57,8 @@ android {
     }
 }
 dependencies {
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation("com.squareup.okhttp3:okhttp:4.12.0")
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0")
     implementation 'net.sourceforge.htmlcleaner:htmlcleaner:2.6'
     implementation 'com.jayway.jsonpath:json-path:2.4.0'
     implementation 'org.jsoup:jsoup:1.11.3'
