--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,5 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.6.1"
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2")
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.6.2")
+    testImplementation("junit:junit:4.13.2")
 }
